--- a/clouddeploy.yaml
+++ b/clouddeploy.yaml
@@ -1,7 +1,7 @@
 apiVersion: deploy.cloud.google.com/v1
 kind: DeliveryPipeline
 metadata:
- name: my-demo-app
+ name: Test01
 description: main application pipeline
 serialPipeline:
  stages:
