--- a/clouddeploy.yaml
+++ b/clouddeploy.yaml
@@ -1,7 +1,7 @@
 apiVersion: deploy.cloud.google.com/v1
 kind: DeliveryPipeline
 metadata:
- name: test01
+ name: my-demo-app
 description: main application pipeline
 serialPipeline:
  stages:
